--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta http-equiv="Content-Language" content="en">
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./styles.css" />
     <title>Penguin</title>
