changed the name from "Kaye" to "CSS" (sorry Kaye gotta' be professional)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="shirt">
         <div>💜</div>
-        <p>I Kaye</p>
+        <p>I CSS</p>
       </div> 
       <div class="penguin-body">
         <div class="arm left"></div>
